--- a/My-CPP-Library.vcxproj.filters
+++ b/My-CPP-Library.vcxproj.filters
@@ -20,22 +20,22 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MyArrayLib.h">
+    <ClInclude Include="MyLib\MyArrayLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MyDateLib.h">
+    <ClInclude Include="MyLib\MyDateLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MyInputLib.h">
+    <ClInclude Include="MyLib\MyInputLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MyMathLib.h">
+    <ClInclude Include="MyLib\MyMathLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MyStringLib.h">
+    <ClInclude Include="MyLib\MyStringLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MyUtilityLib.h">
+    <ClInclude Include="MyLib\MyUtilityLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
